--- a/libft/Makefile
+++ b/libft/Makefile
@@ -63,6 +63,16 @@ SRC = 	ft_memset.c \
 		ft_calloc.c \
 		ft_strlcpy.c \
 		ft_split.c \
+		ft_lstnew.c \
+		ft_lstadd_front.c \
+		ft_lstsize.c \
+		ft_lstlast.c \
+		ft_lstadd_back.c \
+		ft_lstdelone.c \
+		ft_lstclear.c \
+		ft_lstiter.c \
+		ft_lstmap.c \
+
 
 OBJ = $(SRC:.c=.o)
 
